Added cursor based pagination for scalability in our handler'
