# internal/routes/routes.go
@@ -9,9 +9,9 @@ import (
 func RegisterRoutes(app *fiber.App) {
 	videoService := services.NewVideoService()
 	videoHandler := handlers.NewVideoHandler(videoService)
-	api := app.Group("/api")
+	api := app.Group("/api/v1")
 	api.Get("/videos", videoHandler.GetPaginatedVideos)
-
+	api.Get("/videosv2", videoHandler.GetPaginatedVideosUsingCursor)
 	healthHandler := handlers.NewHealthHandler()
 	app.Get("/health", healthHandler.CheckHealth)
 }
